--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 gunicorn==21.2.0
 python-dotenv==1.0.0
+playwright==1.40.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
